--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,8 @@
 html {
   scroll-behavior: smooth;
   scroll-padding: 2em;
+  font-family: 'Roboto', sans-serif;
+
 }
 @tailwind components;
 @tailwind utilities;
